# braintrust-grep

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
examples/: README.md  find_errors.yaml  symptoms.re  symptoms_hunt.yaml
src/braintrust_grep/: __init__.py  cli.py  client.py  clock.py  config.py  enrich.py  errors.py  export.py  links.py  metadata.py  predicates.py  projects.py  query.py  search.py
tests/: conftest.py  test_cli.py  test_client.py  test_enrich.py  test_export.py  test_links.py  test_metadata.py  test_predicates.py  test_projects.py  test_query.py  test_search.py
