[project]
name = "braintrust-grep"
version = "0.1.0"
description = "Regex and structural search over Braintrust logs, working around BTQL's lack of regex."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Abe Flansburg" }]
keywords = ["braintrust", "btql", "logs", "observability", "regex", "grep", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Debuggers",
]
dependencies = [
    "httpx>=0.27",
    "typer>=0.12",
]

[project.urls]
Homepage = "https://github.com/aflansburg/braintrust-grep"
Repository = "https://github.com/aflansburg/braintrust-grep"
Issues = "https://github.com/aflansburg/braintrust-grep/issues"

[project.optional-dependencies]
dotenv = ["python-dotenv>=1.0"]
yaml = ["pyyaml>=6.0"]
test = ["pytest>=8", "respx>=0.21", "pytest-cov>=5", "pyyaml>=6.0"]
dev = ["braintrust-grep[test,dotenv,yaml]", "ruff>=0.6"]

[project.scripts]
btgrep = "braintrust_grep.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/braintrust_grep"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.coverage.run]
source = ["braintrust_grep"]
